# Django_Web_Project-Quotes

./: .gitignore  Hw9.ipynb  README.md  pyproject.toml
django_project/: db.sqlite3
django_project/django_project/: settings.py
django_project/quotes/: views.py
django_project/quotes/static/quotes/: style.css
django_project/quotes/templates/quotes/: base.html  index.html
django_project/utils/: migration.py
