[tool.poetry]
name = "django_project"
version = "3.10"
description = ""
authors = ["Olha <https://github.com/HelgaTsar>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
pymongo = "^4.6.2"
bson = "^0.5.10"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
